src/parser/snapshots/rbx_rsml__parser__tests__value_string_multi.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                Identifier(
                    "Text",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        7,
                        StringMulti(
                            MultilineString {
                                nestedness: Ok(
                                    0,
                                ),
                                content: "multi line",
                                span: (
                                    7,
                                    21,
                                ),
                            },
                        ),
                        21,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    21,
                    SemiColon,
                    22,
                ),
                leading_trivia: None,
            },
        ),
    },
]
